class name changes

--- a/index.html
+++ b/index.html
@@ -56,78 +56,79 @@
     <div class="conteiner">
        <ul class="advantages list">
            <li class="item">
-            <div class="icon-background">
+            <div class="advantages-background">
             <svg width="70px" height="70px">
                 <use href="./img/symbol-defs.svg#icon-antenna"></use>
             </svg>
             </div>
-               <h3 class="advantages-title">Внимание к деталям</h3>
+               <h3 class="title advantages-title">Внимание к деталям</h3>
                <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
            </li>
         <li class="item">
-            <div class="icon-background">
+            <div class="advantages-background">
                 <svg width="70px" height="70px">
                     <use href="./img/symbol-defs.svg#icon-clock"></use>
                 </svg>
             </div>
-            <h3 class="advantages-title">Пунктуальность</h3>
+            <h3 class="title advantages-title">Пунктуальность</h3>
             <p class="advantages-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
         </li>
         <li class="item">
-            <div class="icon-background">
+            <div class="advantages-background">
                 <svg width="70px" height="70px">
                     <use href="./img/symbol-defs.svg#icon-diagram"></use>
                 </svg>
             </div>
-            <h3 class="advantages-title">Планирование</h3>
+            <h3 class="title advantages-title">Планирование</h3>
             <p class="advantages-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
         <li class="item">
-            <div class="icon-background">
+            <div class="advantages-background">
                 <svg width="70px" height="70px">
                     <use href="./img/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
             </div>
-            <h3 class="advantages-title">Современные технологии</h3>
+            <h3 class="title advantages-title">Современные технологии</h3>
             <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
        </ul>
     </div>
    </section>
-   <!--работа и команда-->
+   <!--работа-->
    <section class="section work">
     <div class="conteiner">
        <h2 class="section-title">Чем мы занимаемся</h2>
        <ul class="work-example list">
-           <li class="item"><img class="item-image"
+           <li class="item"><img class="work-example-image"
             src="./img/box1.jpg"
             alt="разработчик пишет код на пк"
             width="370"
             height="294"/>
-            <p class="lable-text">Десктопные приложения</p>
+            <p class="title work-example-title">Десктопные приложения</p>
            </li>
-           <li class="item"><img class="item-image"
+           <li class="item"><img class="work-example-image"
             src="./img/box2.jpg"
             alt="разработка приложений для мобильных устройств"
             width="370"
             height="294"/>
-            <p class="lable-text">Мобильные приложения</p>
+            <p class="title work-example-title">Мобильные приложения</p>
            </li>
-           <li class="item"><img class="item-image"
+           <li class="item"><img class="work-example-image"
             src="./img/box3.jpg"
             alt="подбор цветов дизайнером"
             width="370"
             height="294"/>
-            <p class="lable-text">Дизайнерские решения</p>
+            <p class="title work-example-title">Дизайнерские решения</p>
            </li>
        </ul>
     </div>
    </section>
+<!--команда-->
     <section class="section our-team">
         <div class="conteiner">
         <h2 class="section-title">Наша команда</h2>
         <ul class="list team">
-            <li class="human"><img
+            <li class="team-member"><img
                 src="./img/foto1.jpg"
                 alt="мужчина с бородой в очках широко улыбается"
                 width="270"
@@ -161,7 +162,7 @@
                         </li>
                     </ul>
             </li>
-            <li class="human"><img
+            <li class="team-member"><img
                 src="./img/foto2.jpg"
                 alt="женщина со светлыми волосами в очках широко улыбается"
                 width="270"
@@ -195,7 +196,7 @@
                     </li>
                 </ul>
             </li>
-            <li class="human"><img
+            <li class="team-member"><img
                 src="./img/foto3.jpg"
                 alt="мужчина с бородкой широко улыбается"
                 width="270"
@@ -229,7 +230,7 @@
                     </li>
                 </ul>
             </li>
-            <li class="human"><img
+            <li class="team-member"><img
                 src="./img/foto4.jpg"
                 alt="мужчина с бородой в очках улыбается"
                 width="270"
@@ -328,7 +329,7 @@
 </address>
         </div>
 <div class="join">
-    <p class="join-text">присоединяйтесь</p>
+    <p class="title join-title">присоединяйтесь</p>
 <ul class="list socials join-socials">
     <li>
         <a class="socials-background socials-white" href="">
@@ -357,7 +358,7 @@
 </ul>
 </div>
     <form class="join-form">
-        <label for="email" class= "join-text"> Подпишитесь на рассылку</label>
+        <label for="email" class= "title join-title"> Подпишитесь на рассылку</label>
                 <div class="join-fild"><input id="email" class="join-email" type="email" name="email" placeholder="E-mail"/>
         <button class="button join-button" type="submit"><span class="join-button-text">Подписаться</span><svg class="join-icon" width="24px" height="24px">
             <use href="./img/symbol-defs.svg#icon-icon-send"></use>
