--- a/portfolio.html
+++ b/portfolio.html
@@ -50,18 +50,18 @@
             <!--радиокнопки-->
             <div class="conteiner">
             <ul class="radio list">
-                <li class="item"><button class="radio-buttons" type="button">Все</button></li>
-                <li class="item"><button class="radio-buttons" type="button">Веб-сайты</button></li>
-                <li class="item"><button class="radio-buttons" type="button">Приложения</button></li>
-                <li class="item"><button class="radio-buttons" type="button">Дизайн</button></li>
-                <li class="item"><button class="radio-buttons" type="button">Маркетинг</button></li>
+                <li class="item"><button class="radio-button" type="button">Все</button></li>
+                <li class="item"><button class="radio-button" type="button">Веб-сайты</button></li>
+                <li class="item"><button class="radio-button" type="button">Приложения</button></li>
+                <li class="item"><button class="radio-button" type="button">Дизайн</button></li>
+                <li class="item"><button class="radio-button" type="button">Маркетинг</button></li>
             </ul>
             </div>
             <!--карточки-->
             <div class="conteiner">
-            <ul class="card list">
-                <li class="item"><a class="cards-h-f" href="">
-                    <div class="card-foto"><img class="card-image" src="./img/card1.jpg"
+            <ul class="cards-set list">
+                <li class="item"><a class="card-link" href="">
+                    <div class="card"><img class="card-image" src="./img/card1.jpg"
                     alt="Открытый лептоп с изображением веб-сайта"
                     width="370"
                     height="294">
@@ -69,26 +69,26 @@
                     <p class="card-overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p></div></div>
                     <div class="card-text">
-                    <h2 class="cards-title">Технокряк</h2>
-                    <p class="cards-description">Веб-сайт</p>
+                    <h2 class="card-title">Технокряк</h2>
+                    <p class="card-description">Веб-сайт</p>
                     </div>
                     </a>
                 </li>
-                <li class="item"><a class="cards-h-f" href="">
-                    <div class="card-foto"><img class="card-image" src="./img/card2.jpg"
+                <li class="item"><a class="card-link" href="">
+                    <div class="card"><img class="card-image" src="./img/card2.jpg"
                     alt="Два игрока с баскетбольнім мячем"
                     width="370"
                     height="294">
                     <div class="card-overlay">
                     <p class="card-overlay-text">Постер New Orlean vs Golden Star.</p></div></div>
                     <div class="card-text">
-                    <h2 class="cards-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
-                    <p class="cards-description">Дизайн</p>
+                    <h2 class="card-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
+                    <p class="card-description">Дизайн</p>
                     </div>
                      </a>
                 </li>
-                <li class="item"><a class="cards-h-f" href="">
-                    <div class="card-foto"><img class="card-image" src="./img/card3.jpg"
+                <li class="item"><a class="card-link" href="">
+                    <div class="card"><img class="card-image" src="./img/card3.jpg"
                     alt="Логотип ресторана в виде рыбы"
                     width="370"
                     height="294">
@@ -96,13 +96,13 @@
                     <p class="card-overlay-text">Ресторан Seafood.</p>
                     </div></div>
                     <div class="card-text">
-                    <h2 class="cards-title">Ресторан <span lang="en">Seafood</span></h2>
-                    <p class="cards-description">Приложение</p>
+                    <h2 class="card-title">Ресторан <span lang="en">Seafood</span></h2>
+                    <p class="card-description">Приложение</p>
                     </div>
                     </a>
                 </li>
-                <li class="item"><a class="cards-h-f" href="">
-                    <div class="card-foto"><img class="card-image" src="./img/card4.jpg"
+                <li class="item"><a class="card-link" href="">
+                    <div class="card"><img class="card-image" src="./img/card4.jpg"
                     alt="Безпроводные акустические наушники черного цвета"
                     width="370"
                     height="294">
@@ -110,13 +110,13 @@
                     <p class="card-overlay-text">Проект Prime.</p>
                     </div></div>
                     <div class="card-text">
-                    <h2 class="cards-title">Проект <span lang="en">Prime</span></h2>
-                    <p class="cards-description">Маркетинг</p>
+                    <h2 class="card-title">Проект <span lang="en">Prime</span></h2>
+                    <p class="card-description">Маркетинг</p>
                     </div>
                     </a>
                 </li>
-                <li class="item"><a class="cards-h-f" href="">
-                    <div class="card-foto"><img class="card-image" src="./img/card5.jpg"
+                <li class="item"><a class="card-link" href="">
+                    <div class="card"><img class="card-image" src="./img/card5.jpg"
                     alt="Две коробки: большая белая и маленькая коричневая"
                     width="370"
                     height="294">
@@ -124,13 +124,13 @@
                     <p class="card-overlay-text">Проект Boxes.</p>
                     </div></div>
                     <div class="card-text">
-                    <h2 class="cards-title">Проект <span lang="en">Boxes</span></h2>
-                    <p class="cards-description">Приложение</p>
+                    <h2 class="card-title">Проект <span lang="en">Boxes</span></h2>
+                    <p class="card-description">Приложение</p>
                     </div>
                     </a>
                 </li>
-                <li class="item"><a class="cards-h-f" href="">
-                    <div class="card-foto"><img class="card-image" src="./img/card6.jpg"
+                <li class="item"><a class="card-link" href="">
+                    <div class="card"><img class="card-image" src="./img/card6.jpg"
                     alt="Монитор компьютера с изображением веб-сайта"
                     width="370"
                     height="294">
@@ -138,13 +138,13 @@
                     <p class="card-overlay-text">Inspiration has no Borders.</p>
                     </div></div>
                     <div class="card-text">
-                    <h2 class="cards-title" lang="en">Inspiration has no Borders</h2>
-                    <p class="cards-description">Веб-сайт</p>
+                    <h2 class="card-title" lang="en">Inspiration has no Borders</h2>
+                    <p class="card-description">Веб-сайт</p>
                     </div>
                     </a>
                 </li>
-                <li class="item"><a class="cards-h-f" href="">
-                    <div class="card-foto"><img class="card-image" src="./img/card7.jpg"
+                <li class="item"><a class="card-link" href="">
+                    <div class="card"><img class="card-image" src="./img/card7.jpg"
                     alt="Открытый журнал"
                     width="370"
                     height="294">
@@ -152,13 +152,13 @@
                     <p class="card-overlay-text">Издание Limited Edition.</p>
                     </div></div>
                     <div class="card-text">
-                    <h2 class="cards-title">Издание <span lang="en">Limited Edition</span></h2>
-                    <p class="cards-description">Дизайн</p>
+                    <h2 class="card-title">Издание <span lang="en">Limited Edition</span></h2>
+                    <p class="card-description">Дизайн</p>
                 </div>
                 </a>
                 </li>
-                <li class="item"><a class="cards-h-f" href="">
-                    <div class="card-foto"><img class="card-image" src="./img/card8.jpg"
+                <li class="item"><a class="card-link" href="">
+                    <div class="card"><img class="card-image" src="./img/card8.jpg"
                     alt="Лейба"
                     width="370"
                     height="294">
@@ -166,13 +166,13 @@
                     <p class="card-overlay-text">Проект LAB.</p>
                     </div></div>
                     <div class="card-text">
-                    <h2 class="cards-title">Проект <span lang="en">LAB</span></h2>
-                    <p class="cards-description">Маркетинг</p>
+                    <h2 class="card-title">Проект <span lang="en">LAB</span></h2>
+                    <p class="card-description">Маркетинг</p>
                     </div>
                     </a>
                 </li>
-                <li class="item"><a class="cards-h-f" href="">
-                    <div class="card-foto"><img class="card-image" src="./img/card9.jpg"
+                <li class="item"><a class="card-link" href="">
+                    <div class="card"><img class="card-image" src="./img/card9.jpg"
                     alt="Кто-то работает на лептопе"
                     width="370"
                     height="294">
@@ -180,8 +180,8 @@
                     <p class="card-overlay-text">Growing Business.</p>
                     </div></div>
                     <div class="card-text">
-                    <h2 class="cards-title" lang="en">Growing Business</h2>
-                    <p class="cards-description">Приложение</p>
+                    <h2 class="card-title" lang="en">Growing Business</h2>
+                    <p class="card-description">Приложение</p>
                     </div>
                     </a>
                 </li>
@@ -209,7 +209,7 @@
                 </address>
             </div>
             <div class="join">
-                <p class="join-text">присоединяйтесь</p>
+                <p class="title join-title">присоединяйтесь</p>
                 <ul class="list socials join-socials">
                     <li>
                         <a class="socials-background socials-white" href="">
@@ -238,10 +238,10 @@
                 </ul>
             </div>
             <form class="join-form">
-                <label for="email" class="join-text"> Подпишитесь на рассылку</label>
+                <label for="email" class="title join-title"> Подпишитесь на рассылку</label>
                 <div class="join-fild"><input id="email" class="join-email" type="email" name="email"
                         placeholder="E-mail" />
-                    <button class="join-button" type="submit"><span class="join-button-text">Подписаться</span><svg
+                    <button class="button join-button" type="submit"><span class="join-button-text">Подписаться</span><svg
                             class="join-icon" width="24px" height="24px">
                             <use href="./img/symbol-defs.svg#icon-icon-send"></use>
                         </svg></button>
